crates/core-executor/src/tests/sql/commands/snapshots/top/query_top_with_no_order.snap
---
source: crates/core-executor/src/tests/sql/commands/top.rs
description: "\"SELECT TOP 5 c1 FROM testtable\""
info: "Setup queries: CREATE OR REPLACE TABLE testtable (c1 STRING); INSERT INTO testtable (c1) VALUES ('1'), ('2'), ('3'), ('20'), ('19'), ('18'), ('1'), ('2'), ('3'), ('4'), (NULL), ('30'), (NULL)"
---
Ok(
    [
        "+----+",
        "| c1 |",
        "+----+",
        "| 1  |",
        "| 2  |",
        "| 3  |",
        "| 20 |",
        "| 19 |",
        "+----+",
    ],
)
